<resources>
    <string name="app_name">Pocket Soccer</string>

    // Main texts

    <string name="newGame">New game</string>
    <string name="loadGame">Load game</string>
    <string name="settings">Settings</string>
    <string name="scores">Scores</string>
    <string name="no_saved_message">No saved game in memory</string>

    // New game texts

    <string name="choose_teams">Choose teams</string>
    <string name="left_player">Left player</string>
    <string name="right_player">Right player</string>
    <string name="accept">Accept</string>
    <string name="enter_player_name_message">Enter player names</string>

    // Load game texts

    <string name="vs">vs</string>
    <string name="load">Load</string>
    <string name="win_condition">Win condition:</string>
    <string name="elapsed_time">Elapsed time:</string>

    <string name="time_format">%d : %d</string>
    <string name="condition_goals_format">First player to score %d points wins</string>
    <string name="condition_time_format">When timer reaches %d : %d</string>

    <string name="back">Back</string>

    // Settings texts

    <string name="field">Field</string>
    <string name="speed">Speed</string>
    <string name="goals">Goals</string>
    <string name="time">Time</string>
    <string name="settings_saved_message">Settings saved</string>
    <string name="settings_restored_message">Default settings restored</string>

    // Play messages

    <string name="score_format">%s scored!</string>
    <string name="win_format">%s won!</string>
    <string name="draw_message">Draw!</string>

    // Asset uri-s

    <string name="bounce_sound">sounds/bounce.mp3</string>
    <string name="score_sound">sounds/crowd.mp3</string>

    // Data structures

    <string-array name="country_names">
        <item>armenia</item>
        <item>australia</item>
        <item>austria</item>
        <item>canada</item>
        <item>central_african_republic</item>
        <item>croatia</item>
        <item>cyprus</item>
        <item>egypt</item>
        <item>fiji</item>
        <item>france</item>
        <item>galapagos_islands</item>
        <item>georgia</item>
        <item>germany</item>
        <item>ireland</item>
        <item>italy</item>
        <item>liechtenstein</item>
        <item>malta</item>
        <item>martinique</item>
        <item>new_zealand</item>
        <item>north_korea</item>
        <item>poland</item>
        <item>portugal</item>
        <item>russia</item>
        <item>sardinia</item>
        <item>scotland</item>
        <item>serbia</item>
        <item>slovenia</item>
        <item>spain</item>
        <item>syria</item>
        <item>tibet</item>
        <item>tonga</item>
        <item>united_kingdom</item>
        <item>united_nations</item>
        <item>united_states</item>
        <item>vatican</item>
        <item>virgin_islands</item>
    </string-array>

    <string-array name="field_names">
        <item>field0</item>
        <item>field1</item>
        <item>field2</item>
        <item>field3</item>
    </string-array>

    // Shared preferences name

    <string name="preference_file_key">rs.etf.ba150210d.pmu_projekat.preference_file</string>
</resources>
