<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.main.NewGameFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/newGame_label_title"
            style="@style/BigText"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/choose_teams" />

        <TextView
            android:id="@+id/newGame_label_left"
            style="@style/HighlightBigText"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newGame_label_title"
            app:layout_constraintEnd_toStartOf="@id/newGame_label_right"
            android:text="@string/left_player" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/newGame_label_left"
            app:layout_constraintEnd_toStartOf="@id/newGame_label_left"
            app:layout_constraintBottom_toBottomOf="@id/newGame_label_left">

            <CheckBox
                android:id="@+id/newGame_choice_leftBot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                app:layout_constraintStart_toEndOf="@id/newGame_choice_leftBot"
                app:layout_constraintTop_toTopOf="@id/newGame_choice_leftBot"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/newGame_choice_leftBot"
                android:src="@drawable/ic_bot" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/newGame_label_right"
            style="@style/HighlightBigText"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintStart_toEndOf="@id/newGame_label_left"
            app:layout_constraintTop_toBottomOf="@id/newGame_label_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/right_player" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/newGame_label_right"
            app:layout_constraintTop_toTopOf="@id/newGame_label_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/newGame_label_right">

            <CheckBox
                android:id="@+id/newGame_choice_rightBot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/newGame_choice_rightBot"
                app:layout_constraintEnd_toStartOf="@id/newGame_choice_rightBot"
                app:layout_constraintBottom_toBottomOf="@id/newGame_choice_rightBot"
                android:src="@drawable/ic_bot" />

        </android.support.constraint.ConstraintLayout>

        <rs.etf.ba150210d.soccer.util.EditTextBackEvent
            android:id="@+id/newGame_editText_leftPlayerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newGame_label_left"
            app:layout_constraintEnd_toStartOf="@id/newGame_editText_rightPlayerName"
            android:textColor="@color/colorText"
            android:imeOptions="flagNoExtractUi" />

        <rs.etf.ba150210d.soccer.util.EditTextBackEvent
            android:id="@+id/newGame_editText_rightPlayerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintStart_toEndOf="@id/newGame_editText_leftPlayerName"
            app:layout_constraintTop_toBottomOf="@id/newGame_label_right"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorText"
            android:imeOptions="flagNoExtractUi" />

        <TextView
            android:id="@+id/newGame_text_leftTeamName"
            style="@style/TeamNameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newGame_editText_leftPlayerName"
            app:layout_constraintEnd_toEndOf="@id/newGame_editText_leftPlayerName"
            android:text="Serbia" />

        <android.support.v4.view.ViewPager
            android:id="@+id/newGame_pager_left"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/newGame_text_leftTeamName"
            app:layout_constraintEnd_toEndOf="@id/newGame_editText_leftPlayerName"
            app:layout_constraintBottom_toTopOf="@id/newGame_fab_accept" />

        <TextView
            android:id="@+id/newGame_text_rightTeamName"
            style="@style/TeamNameText"
            app:layout_constraintStart_toStartOf="@id/newGame_editText_rightPlayerName"
            app:layout_constraintTop_toBottomOf="@id/newGame_editText_rightPlayerName"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Italy" />

        <android.support.v4.view.ViewPager
            android:id="@+id/newGame_pager_right"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="@id/newGame_editText_rightPlayerName"
            app:layout_constraintTop_toBottomOf="@id/newGame_text_rightTeamName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/newGame_fab_accept" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/newGame_fab_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_done" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/newGame_fab_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_back" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>