<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.main.LoadGameFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/loadGame_verticalHalf"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView android:id="@+id/loadGame_title"
            style="@style/BigText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/loadGame" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/loadGame_layout_players"
            android:layout_margin="@dimen/medium_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loadGame_title">

            <android.support.constraint.Guideline
                android:id="@+id/loadGame_players_verticalHalf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical" />

            <TextView android:id="@+id/loadGame_vs"
                style="@style/HighlightPlayerNameText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/vs" />

            <TextView android:id="@+id/loadGame_leftPlayer"
                style="@style/PlayerNameText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/loadGame_players_verticalHalf" />

            <TextView android:id="@+id/loadGame_rightPlayer"
                style="@style/PlayerNameText"
                app:layout_constraintStart_toEndOf="@id/loadGame_players_verticalHalf"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/loadGame_layout_score"
            android:layout_margin="@dimen/medium_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loadGame_layout_players">

            <android.support.constraint.Guideline
                android:id="@+id/loadGame_score_horizontalHalf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical" />

            <TextView android:id="@+id/loadGame_leftPoints"
                style="@style/RegularText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/loadGame_score_horizontalHalf" />

            <TextView android:id="@+id/loadGame_rightPoints"
                style="@style/RegularText"
                app:layout_constraintStart_toEndOf="@id/loadGame_score_horizontalHalf"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView android:id="@+id/loadGame_leftTeamName"
                style="@style/TeamNameText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/loadGame_leftPoints" />

            <TextView android:id="@+id/loadGame_rightTeamName"
                style="@style/TeamNameText"
                app:layout_constraintStart_toEndOf="@id/loadGame_rightPoints"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/loadGame_leftTeamFlag"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/small_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/loadGame_leftTeamName"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="fitEnd"
                android:src="@drawable/cyprus" />

            <ImageView
                android:id="@+id/loadGame_rightTeamFlag"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="@dimen/small_margin"
                app:layout_constraintStart_toEndOf="@id/loadGame_rightTeamName"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:scaleType="fitStart"
                android:src="@drawable/vatican" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/loadGame_layout_time"
            android:layout_margin="@dimen/medium_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loadGame_layout_score">

            <android.support.constraint.Guideline
                android:id="@+id/loadGame_time_verticalHalf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical" />

            <TextView android:id="@+id/loadGame_elapsedTimeTitle"
                style="@style/RegularText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/loadGame_time_verticalHalf"
                android:text="@string/elapsed_time" />

            <TextView android:id="@+id/loadGame_elapsedTime"
                style="@style/RegularText"
                app:layout_constraintStart_toEndOf="@id/loadGame_time_verticalHalf"
                app:layout_constraintTop_toTopOf="parent"
                android:text="3:14" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/loadGame_layout_condition"
            android:layout_margin="@dimen/medium_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/loadGame_layout_time">

            <android.support.constraint.Guideline
                android:id="@+id/loadGame_condition_verticalHalf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical" />

            <TextView android:id="@+id/loadGame_condition"
                style="@style/RegularText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="First one to reach 7 goals wins" />

        </android.support.constraint.ConstraintLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/loadGame_fab_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_done"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/loadGame_fab_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_back" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>